infer/tests/codetoanalyze/objc/errors/category_procdesc/main.c
/*
 * Copyright (c) 2013 - Facebook.
 * All rights reserved.
 */

#import "EOCPerson.h"

int main() {
    EOCPerson *person = [[EOCPerson alloc] init];
    [person performDaysWork];
    int *x = malloc(sizeof(int));
    return 0;
}
